<resources>
    <string name="app_name">eWallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BC eWallet</string>
    <string name="nav_header_subtitle">Hello there, Welcome to eWallet App.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    
    <string name="menu_budget">Budget Mode</string>
    <string name="menu_future">Future recurring record mode</string>
    <string name="menu_setUpRecur">Set up recurring expenses</string>
    <string name="menu_export">Export CSV file</string>

    <string name="txtSal">Salary</string>
    <string name="txtCat">Category</string>
    <string name="txtDate">Date</string>
    <string name="btnBill">Bill</string>
    <string name="btnFood">Food</string>
    <string name="btnHealth">Health</string>
    <string name="btnHouse">Housing</string>
    <string name="btnTrans">Transport</string>
    <string name="btnToilet">Toiletry</string>
    <string name="btnClot">Clothes</string>
    <string name="btnMiscel">Miscellaneous</string>
    <string name="btnEnt">Entertain</string>
    <string name="btnDep">Deposit</string>
    <string name="btnSal">Salary</string>
    <string name="btnSav">Savings</string>

    <string name="txtInterval">Choose Interval</string>
    <string name="radMonth">Month Interval</string>
    <string name="radWeek">Year Interval</string>
    <string name="btnDel">Delete</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDate">Select the date</string>

    <string name="export_expenses">Export Expenses</string>
    <string name="export_income">Export Income</string>

    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add income</string>

    <string name="btnDetails">Details</string>
    <string name="txtAmount">Amount</string>
    <string name="custom_dialog">Set your budget</string>
    <string name="submit">Submit</string>
    <string name="budget_data">Enter your budget</string>
    <string name="set_budget">Set Budget</string>

</resources>