<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_future">



    <fragment
        android:id="@+id/nav_budget"
        android:name="com.example.project_ewallet.ui.budget.BudgetFragment"
        android:label="@string/menu_budget"
        tools:layout="@layout/fragment_budget" />
    <fragment
        android:id="@+id/nav_future"
        android:name="com.example.project_ewallet.ui.future.FutureFragment"
        android:label="@string/menu_future"
        tools:layout="@layout/fragment_future" />
    <fragment
        android:id="@+id/nav_setUpRecur"
        android:name="com.example.project_ewallet.ui.setUpRecur.SetUpRecurFragment"
        android:label="@string/menu_setUpRecur"
        tools:layout="@layout/fragment_setuprecur" />
    <fragment
        android:id="@+id/nav_export"
        android:name="com.example.project_ewallet.ui.export.ExportFragment"
        android:label="@string/menu_export"
        tools:layout="@layout/fragment_export" />


</navigation>